--- a/chatbot/pubspec.yaml
+++ b/chatbot/pubspec.yaml
@@ -28,17 +28,18 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animate_do: ^3.3.4
+  avatar_glow: ^3.0.1
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  flutter_tts: ^4.0.2
   http: ^1.2.2
+  provider: ^6.1.2
+  shared_preferences: ^2.3.2
   speech_to_text: ^7.0.0
+  uuid: ^4.5.0
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
